--- a/01-annotations.ipynb
+++ b/01-annotations.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "5e1c3631-2669-443e-80ee-1c2346f6b7ab",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,12 @@
    "id": "5c15ab64-0c59-44bb-96cf-552d1ba23dab",
    "metadata": {},
    "source": [
-    "Elle peut alors être utilisée."
+    "Elle peut alors être utilisée partout sur une classe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "2d138eb5-2d9a-49ad-9013-47287e694acc",
    "metadata": {},
    "outputs": [],
@@ -66,30 +66,34 @@
    "id": "b75b4fa0-9171-4ecc-83da-7790be7030eb",
    "metadata": {},
    "source": [
-    "Si l'on y ajoute des méthodes leurs types (primitifs, référence vers la class Class, annotation, enumération ou un tableau des précédents) et leurs noms définissent respectibement des paramètres. Il est aussi possible de donner des valeur par défaut.  "
+    "Si l'on y ajoute des méthodes leurs types de retour (primitifs, référence vers une instance de la class Class, annotation, enumération ou un tableau des précédents) et leurs noms définissent respectivement les paramètres de l'annotation. Il est aussi possible de donner des valeurs par défaut.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "178f4771-8fe5-4bfe-a2f7-c143ad3c0e9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "public @interface MyAnnotation {\n",
+    "    public enum Digit {UN, DEUX};\n",
+    "    \n",
     "    String message();\n",
     "    int size() default 10;\n",
+    "    Digit digit();\n",
+    "    Class[] classes();\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "d8442c50-b2c7-4eb8-bfe2-0842ca88990e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@MyAnnotation(message=\"hello\")\n",
+    "@MyAnnotation(message=\"hello\", digit=MyAnnotation.Digit.UN, classes={String.class, Arrays.class})\n",
     "public class MyClass {\n",
     "}"
    ]
@@ -99,12 +103,12 @@
    "id": "99fd8445-0539-442b-b41d-52050ce15abd",
    "metadata": {},
    "source": [
-    "Si leur attribut obligatoire s'appelle value, il est possible d'omettre son nom lors de l'annotation."
+    "Si leur seul attribut obligatoire s'appelle value, il est possible d'omettre son nom lors de l'annotation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "721f3ecf-ebcb-4368-8abe-8e1d942f2ab8",
    "metadata": {},
    "outputs": [],
@@ -117,14 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "c6a60f48-152f-4001-a0f0-feae94f939c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "@MyAnnotation(\"hello\")\n",
-    "public class MyClass {\n",
-    "}"
+    "public class MyClass { }"
    ]
   },
   {
@@ -132,12 +135,12 @@
    "id": "8f0e0fcd-a635-48d8-9ea2-46fed7625bcf",
    "metadata": {},
    "source": [
-    "Une déclaration d'annotation peut être annotée avec [Target](https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/annotation/Target.html) pour contrôler ce qui peut être annoté :  ANNOTATION_TYPE, CONSTRUCTOR, FIELD, LOCAL_VARIABLE, METHOD, PACKAGE, MODULE, PARAMETER, TYPE, and TYPE_PARAMETER"
+    "Une déclaration d'annotation peut être annotée avec [Target](https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/annotation/Target.html) pour contrôler ce qui peut être annoté :  ANNOTATION_TYPE, CONSTRUCTOR, FIELD, LOCAL_VARIABLE, METHOD, PACKAGE, MODULE, PARAMETER, TYPE, et TYPE_PARAMETER"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "d8d06557-201f-44b0-a5c8-d34ce04fab07",
    "metadata": {},
    "outputs": [],
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "8b902043-06f9-494b-b480-839791d2043e",
    "metadata": {},
    "outputs": [],
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "988aaf41-bd07-4a10-b1f4-e0d0116537d4",
    "metadata": {},
    "outputs": [
@@ -193,12 +196,13 @@
    "id": "2e872008-30f0-4185-8383-75e2893e9054",
    "metadata": {},
    "source": [
-    "Par défaut, une annotation ne peut pas être utilisée plusieurs fois. Il faut alors soit définir un wrapper (une annotations qui peut les contenir) "
+    "Par défaut, une annotation ne peut pas être utilisée plusieurs fois sur un même élément.\n",
+    "Il faut alors soit définir un wrapper (une annotations qui peut les contenir) :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "6c0ad46c-8906-4ba6-b5a5-8cfcde6c8af3",
    "metadata": {},
    "outputs": [],
@@ -211,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "2ea1813a-dba7-420b-8276-83803e05dc5f",
    "metadata": {},
    "outputs": [],
@@ -227,32 +231,15 @@
    "id": "96d1217a-abf9-40e6-9063-b1b36922f7bd",
    "metadata": {},
    "source": [
-    "ou les autoriser à être répétable avec @Repeatable pour éviter la déclaration explicite du tableau."
+    "ou les autoriser à être répétable avec @Repeatable pour éviter la déclaration explicite du tableau d'annotations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "d1c7945a-8a6d-4cf9-968f-b061e7ef1d61",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m@Repeatable(MyAnnotations.class)\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m@Target({ElementType.LOCAL_VARIABLE, ElementType.FIELD})\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mpublic @interface MyAnnotation {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    int value() default 0;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m}\u001b[0m",
-      "\u001b[1m\u001b[31mUnresolved dependencies:\u001b[0m",
-      "\u001b[1m\u001b[31m   - class Repeatable\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import java.lang.annotation.Target;\n",
     "import java.lang.annotation.ElementType;\n",
@@ -267,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "a2aabe7b-8682-4cd7-9284-d2820ff636d7",
    "metadata": {},
    "outputs": [],
@@ -294,12 +281,12 @@
    "source": [
     "L'annotation Retention permet précision si l'annotation n'est accessible que pendant la compilation (SOURCE), si en plus elle est ajoutée au fichier .class (CLASS) ou si elle est accessible durant l'exécution (RUNTIME).\n",
     "\n",
-    "Inherited permet d'indiquer que l'annotation d'un Type est associé à ses descendants et Documented qu'elle apparait dans la javadoc."
+    "L'annotation Inherited permet d'indiquer que l'annotation d'un type est associée aussi à ses descendants et l'annotation Documented qu'elle doit apparaitre dans la javadoc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "9b263fe3-16ba-4530-9118-6bca9ab7f06b",
    "metadata": {},
    "outputs": [],
@@ -323,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "4ad1bbfa-8cdb-4e0b-aeed-0d234c2a2d39",
    "metadata": {},
    "outputs": [],
@@ -344,14 +331,16 @@
    "id": "438cd916-d53a-40ed-b4dd-2f0a26c5499b",
    "metadata": {},
    "source": [
-    "Les annotations peuvent être utilisée lors de l'exécution par introspection à condition d'avoir la rétention adaptée. La class Class permet de représenter une classe et d'accéder à la représentation de ses constituants représentés chacun par une classe spécifique (Method, Field, Constructor, ...). Ensuite des actions peuvent être déclenchée de façon programmatique par exemple invoquer une méthode sur une instance, invoquer un constructeur, ...\n",
+    "Les annotations peuvent être utilisées lors de l'exécution par introspection à condition d'avoir la rétention adaptée. \n",
     "\n",
-    "L'exemple ci-dessus affiche les méthodes de la classe précédent annotées avec @MyAnnotation."
+    "Pour rappel, la class Class permet de représenter une classe et d'accéder à la représentation de ses constituants représentés chacun par une classe spécifique (Method, Field, Constructor, ...). Ensuite des actions peuvent être déclenchées de façon programmatique par exemple invoquer une méthode sur une instance, invoquer un constructeur, ...\n",
+    "\n",
+    "L'exemple ci-dessus affiche les méthodes de la classe précédente annotées avec @MyAnnotation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "4173b808-4653-489f-8132-d93eb65946df",
    "metadata": {},
    "outputs": [
@@ -366,8 +355,8 @@
    ],
    "source": [
     "import java.lang.reflect.Method;\n",
-    "MyClass o = new MyClass();\n",
-    "Arrays.stream(o.getClass().getDeclaredMethods())\n",
+    "MyClass myObject = new MyClass();\n",
+    "Arrays.stream(myObject.getClass().getDeclaredMethods())\n",
     "    .filter(m->m.getAnnotation(MyAnnotation.class)!=null)\n",
     "    .map(Method::getName)\n",
     "    .forEach(System.out::println);"
@@ -383,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "0722e8b0-c920-4b63-b548-a39f0ca42f23",
    "metadata": {},
    "outputs": [
